--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -11,7 +11,7 @@
   "AllowedHosts": "*",
   "AuthSettings": {
     "Key": "anjfhyivrmaaslmitjwwzttipeilngmt",
-    "Audience": "http://ahmadmozaffar.net",
-    "Issuer": "http://ahmadmozaffar.net"
+    "Issuer": "https://localhost:44381/",
+    "Audience": "https://localhost:44381/"
   }
 }
