--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -13,5 +13,12 @@
     "Key": "anjfhyivrmaaslmitjwwzttipeilngmt",
     "Issuer": "https://localhost:44381/",
     "Audience": "https://localhost:44381/"
+  },
+  "MailSettings": {
+    "From": "vytuong2903@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "vytuong2903@gmail.com",
+    "Password": "zygm nvid fdef dfth"
   }
 }
