send email confirm when register & OTP when login

--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -15,10 +15,10 @@
     "Audience": "https://localhost:44381/"
   },
   "MailSettings": {
-    "From": "myemail@gmail.com",
+    "From": "vytuong2903@gmail.com",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "Username": "myemail@gmail.com",
-    "Password": "mypassword"
+    "Username": "vytuong2903@gmail.com",
+    "Password": "zygm nvid fdef dfth"
   }
 }
