--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -15,10 +15,10 @@
     "Audience": "https://localhost:44381/"
   },
   "MailSettings": {
-    "From": "youremail@gmail.com",
+    "From": "vytuong2903@gmail.com",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "Username": "youremail@gmail.com",
-    "Password": "yourpassword"
+    "Username": "vytuong2903@gmail.com",
+    "Password": "zygm nvid fdef dfth"
   }
 }
