--- a/UserService/UserService/appsettings.json
+++ b/UserService/UserService/appsettings.json
@@ -14,11 +14,12 @@
     "Issuer": "https://localhost:44381/",
     "Audience": "https://localhost:44381/"
   },
+
   "MailSettings": {
-    "From": "vytuong2903@gmail.com",
+    "From": "youremail@gmail.com",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "Username": "vytuong2903@gmail.com",
-    "Password": "zygm nvid fdef dfth"
+    "Username": "youremail@gmail.com",
+    "Password": "yourpassword"
   }
 }
