--- a/UserService/UserService/appsettings.json
+++ b/UserService/UserService/appsettings.json
@@ -17,10 +17,10 @@
 
 
   "MailSettings": {
-    "From": "vytuong2903@gmail.com",
+    "From": "",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "Username": "vytuong2903@gmail.com",
-    "Password": "zygm nvid fdef dfth"
+    "Username": "",
+    "Password": ""
   }
 }
